monitoring/prometheus/ingress/ingress_monitoring-alb-in.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:xxx:certificate/xxx-xxxx
    alb.ingress.kubernetes.io/group.name: infra-alb-internal
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-name: infra-alb-internal
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-FS-1-2-Res-2020-10
    kubernetes.io/ingress.class: alb
  name: monitoring-alb-in
  namespace: monitor
spec:
  rules:
  - host: prometheus.test.com
    http:
      paths:
      - backend:
          service:
            name: prometheus-operated
            port:
              name: http-web
        path: /*
        pathType: ImplementationSpecific
  - host: grafana.test.com
    http:
      paths:
      - backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: alertmanager.test.com
    http:
      paths:
      - backend:
          service:
            name: alertmanager-operated
            port:
              name: http-web
        path: /*
        pathType: ImplementationSpecific
